// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Builder Expect everything to be harmonious 1`] = `
"
Account account1 = new Account();
account1.OrgMigrationId__c = '001';
account1.Name = 'xgov';
account1.BillingStreet = 'North Star Avenue';
account1.BillingCity = 'Swindon';
account1.BillingState = 'Wiltshire';
account1.BillingPostalCode = 'SN2 1SZ';
account1.BillingCountry = 'United Kingdom';
insert account1;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = '001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'austria@x.gov.uk';
contact0.AccountId = account1.Id;
insert contact0;
      
User user1 = new User();
user1.Username = 'austria@x.gov.uk';
user1.Email = 'austria@x.gov.uk';
user1.FirstName = 'Austria';
user1.LastName = 'Hedges';
user1.Alias = 'xgovuk';
user1.CommunityNickname = 'austria';
user1.EmailEncodingKey = 'UTF-8';
user1.LocaleSidKey = 'en_GB';
user1.LanguageLocaleKey = 'en_US';
user1.TimeZoneSidKey = 'Europe/London';
user1.ProfileId = '00e58000001ITpLAAW';
user1.ContactId = contact0.Id;
insert user1;
      
Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = '100';
project1.Acc_WorkdayProjectSetupComplete__c = true;
insert project1;

Acc_ProjectParticipant__c projectParticipant2 = new Acc_ProjectParticipant__c();
projectParticipant2.ParticipantMigrationID__c = '004001';
projectParticipant2.Acc_ParticipantType__c = 'Business';
projectParticipant2.Acc_ParticipantSize__c = 'Medium';
projectParticipant2.Acc_ProjectRole__c = 'Lead';
projectParticipant2.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant2.Acc_ParticipantStatus__c = 'Active';
projectParticipant2.Acc_Award_Rate__c = 50;
projectParticipant2.Acc_Cap_Limit__c = 50;
projectParticipant2.Acc_FlaggedParticipant__c = false;
projectParticipant2.Acc_OverheadRate__c = 20;
projectParticipant2.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant2.Acc_OrganisationType__c = 'Industrial';
projectParticipant2.Acc_CreateProfiles__c = false;
projectParticipant2.Acc_CreateClaims__c = false;
projectParticipant2.Acc_ProjectId__c = project1.Id;
projectParticipant2.Acc_AccountId__c = account1.Id;
insert projectParticipant2;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'noemail@noemail.com';
pcl0.Acc_ProjectId__c = project1.Id;
pcl0.Acc_AccountId__c = account1.Id;
pcl0.Acc_ContactId__c = contact0.Id;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
new Acc_ProjectPeriodProcessor_Batch().start(null);
Acc_ClaimsCreateBatch.start(null);
        "
`;

exports[`Project Builder Expect everything to be harmonious with a prefix 1`] = `
"
Account account1 = new Account();
account1.OrgMigrationId__c = 'hello.001';
account1.Name = 'xgov';
account1.BillingStreet = 'North Star Avenue';
account1.BillingCity = 'Swindon';
account1.BillingState = 'Wiltshire';
account1.BillingPostalCode = 'SN2 1SZ';
account1.BillingCountry = 'United Kingdom';
insert account1;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = 'hello.100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = 'hello.001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'hello.austria@x.gov.uk';
contact0.AccountId = account1.Id;
insert contact0;
      
User user1 = new User();
user1.Username = 'hello.austria@x.gov.uk';
user1.Email = 'hello.austria@x.gov.uk';
user1.FirstName = 'Austria';
user1.LastName = 'Hedges';
user1.Alias = 'xgovuk';
user1.CommunityNickname = 'hello.austria';
user1.EmailEncodingKey = 'UTF-8';
user1.LocaleSidKey = 'en_GB';
user1.LanguageLocaleKey = 'en_US';
user1.TimeZoneSidKey = 'Europe/London';
user1.ProfileId = '00e58000001ITpLAAW';
user1.ContactId = contact0.Id;
insert user1;
      
Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = 'hello.100';
project1.Acc_WorkdayProjectSetupComplete__c = true;
insert project1;

Acc_ProjectParticipant__c projectParticipant2 = new Acc_ProjectParticipant__c();
projectParticipant2.ParticipantMigrationID__c = 'hello.004001';
projectParticipant2.Acc_ParticipantType__c = 'Business';
projectParticipant2.Acc_ParticipantSize__c = 'Medium';
projectParticipant2.Acc_ProjectRole__c = 'Lead';
projectParticipant2.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant2.Acc_ParticipantStatus__c = 'Active';
projectParticipant2.Acc_Award_Rate__c = 50;
projectParticipant2.Acc_Cap_Limit__c = 50;
projectParticipant2.Acc_FlaggedParticipant__c = false;
projectParticipant2.Acc_OverheadRate__c = 20;
projectParticipant2.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant2.Acc_OrganisationType__c = 'Industrial';
projectParticipant2.Acc_CreateProfiles__c = false;
projectParticipant2.Acc_CreateClaims__c = false;
projectParticipant2.Acc_ProjectId__c = project1.Id;
projectParticipant2.Acc_AccountId__c = account1.Id;
insert projectParticipant2;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'hello.noemail@noemail.com';
pcl0.Acc_ProjectId__c = project1.Id;
pcl0.Acc_AccountId__c = account1.Id;
pcl0.Acc_ContactId__c = contact0.Id;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
new Acc_ProjectPeriodProcessor_Batch().start(null);
Acc_ClaimsCreateBatch.start(null);
        "
`;

exports[`Project Builder Expect project to be built, linking correctly to competition 1`] = `
"
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = '100';
project1.Acc_WorkdayProjectSetupComplete__c = true;
insert project1;

project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
new Acc_ProjectPeriodProcessor_Batch().start(null);
Acc_ClaimsCreateBatch.start(null);
        "
`;
